# gridet-gee

./: .gitignore  README.md  pyproject.toml
ancillary/: ancillary.py  gridet_utah_ancillary_assets.py
gridet/: __init__.py  model.py  nldas.py  solar.py  utils.py
gridet/tests/: conftest.py  test_model.py  test_nldas.py  test_solar.py  test_utils.py
notebooks/: Settings.db  potential_et.ipynb
vb_test/: Calculations.vb
vb_test_code/: Calculations.vb  README.md
